--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_auth: ^4.17.4
   firebase_analytics: ^10.8.5
   flutter_dotenv: ^5.1.0
+  google_sign_in: ^6.2.1
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -26,4 +28,7 @@ flutter:
   
   assets:
     - assets/img/
+    - assets/img/brands/
+    - assets/img/brands/google_g.png
+    - assets/img/brands/google_g.svg
     - .env
