Added ReptiGram logo and adjusted gradient

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,4 +31,5 @@ flutter:
     - assets/img/brands/
     - assets/img/brands/google_g.png
     - assets/img/brands/google_g.svg
+    - assets/img/reptiGramLogo.png
     - .env
