--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   google_sign_in: ^6.2.1
   flutter_svg: ^2.0.9
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
