--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.25.4
-  firebase_auth: ^4.17.4
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
   firebase_analytics: ^10.8.5
   flutter_dotenv: ^5.1.0
   google_sign_in: ^6.2.1
   flutter_svg: ^2.0.9
   image_picker: ^1.0.7
+  firebase_storage: ^11.6.0
 
 dev_dependencies:
   flutter_test:
