--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,5 +33,6 @@ flutter:
     - assets/img/brands/
     - assets/img/brands/google_g.png
     - assets/img/brands/google_g.svg
+    - assets/images/default_profile.png
     - assets/img/reptiGramLogo.png
     - .env
