--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,16 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  firebase_analytics: ^10.8.5
-  flutter_dotenv: ^5.1.0
-  google_sign_in: ^6.2.1
+  firebase_core: ^2.13.0
+  firebase_auth: ^4.6.2
+  firebase_storage: ^11.2.2
+  firebase_database: ^10.2.2
+  google_sign_in: ^6.1.0
   flutter_svg: ^2.0.9
-  image_picker: ^1.0.7
-  firebase_storage: ^11.6.0
-  firebase_database: ^10.4.0
+  image_picker: ^0.8.7
+  cached_network_image: ^3.2.3
+  flutter_dotenv: ^5.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -33,6 +34,5 @@ flutter:
     - assets/img/brands/
     - assets/img/brands/google_g.png
     - assets/img/brands/google_g.svg
-    - assets/images/default_profile.png
     - assets/img/reptiGramLogo.png
     - .env
