--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   image_picker: ^0.8.7
   cached_network_image: ^3.2.3
   flutter_dotenv: ^5.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
