--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,17 +12,17 @@ dependencies:
     sdk: flutter
   intl: ^0.18.0
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.13.0
-  firebase_auth: ^4.6.2
-  firebase_storage: ^11.2.2
-  firebase_database: ^10.2.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  firebase_storage: ^11.5.6
+  firebase_database: ^10.3.8
+  firebase_analytics: ^10.7.4
   google_sign_in: ^6.3.0
   google_sign_in_web: ^0.12.4
   flutter_svg: ^2.0.9
   image_picker: ^0.8.7
   cached_network_image: ^3.2.3
-  flutter_dotenv: ^5.1.0
-  provider: ^6.0.5
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -32,10 +32,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   
-  assets:
-    - assets/img/
-    - assets/img/brands/
-    - assets/img/brands/google_g.png
-    - assets/img/brands/google_g.svg
-    - assets/img/reptiGramLogo.png
-    - .env
+  # Remove the non-existent asset directories
+  # assets:
+  #   - assets/images/
+  #   - assets/icons/
