--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ flutter:
   uses-material-design: true
   
   # Remove the non-existent asset directories
-  # assets:
+  assets:
+    - assets/img/reptiGramLogo.png
+
   #   - assets/images/
   #   - assets/icons/
