--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "auth_app",
-    "short_name": "auth_app",
+    "name": "ReptiGram - A Social Network for Reptile Enthusiasts",
+    "short_name": "ReptiGram",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "A Social Network for Reptile Enthusiasts",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
