--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,9 @@
       "**/node_modules/**"
     ]
   },
+  "database": {
+    "rules": "database.rules.json"
+  },
   "storage": {
     "rules": "storage.rules"
   }
